--- a/src/App.css
+++ b/src/App.css
@@ -543,9 +543,9 @@ hr {
     position:fixed;
     z-index:900;
     width:100%;
-    max-width:none;
+    max-width:100%;
     height:100%;
-    background:url(images/background.jpg) top left no-repeat #666;
+    background:url('https://cdn.jsdelivr.net/gh/needleworm/ai_voca/src/images/background.jpg') top left no-repeat #666;
     background-size:cover
 }
 
