--- a/src/App.css
+++ b/src/App.css
@@ -562,9 +562,7 @@ hr {
     right:0;
     bottom:0;
     left:0;
-    background-color:rgba(68,68,68,.6);
-    background-image:-webkit-linear-gradient(-410deg,rgba(68,68,68,.6) 20%,rgba(0,0,0,.9));
-    background-image:linear-gradient(140deg,rgba(68,68,68,.6) 20%,rgba(0,0,0,.9))
+    background-color:rgba(0,0,0,0.6);
 }
 
 .panel-cover__logo {
