--- a/src/App.css
+++ b/src/App.css
@@ -545,7 +545,7 @@ hr {
     width:100%;
     max-width:100%;
     height:100%;
-    background:url('https://cdn.jsdelivr.net/gh/needleworm/ai_voca/src/images/background.jpg') top left no-repeat #666;
+    background:url('./images/background.jpg') top left no-repeat #666;
     background-size:cover
 }
 
