--- a/src/App.css
+++ b/src/App.css
@@ -507,7 +507,8 @@ ul {
 }
 
 .content-wrapper__inner {
-    max-width:100%
+    max-width:100%;
+    min-height:100%;
 }
 
 .footer {
@@ -515,7 +516,9 @@ ul {
     padding:2em 0 0 0;
     border-top:2px solid #ddd;
     font-size:.7em;
-    color:#b3b3b3
+    color:#b3b3b3;
+    bottom : 0;
+    position:absolute;
 }
 
 .footer__copyright {
@@ -551,7 +554,6 @@ hr {
 
 .panel-cover--collapsed {
     width:40%;
-    max-width:530px
 }
 
 .panel-cover--overlay {
@@ -757,7 +759,6 @@ i {
 
 .panel-cover--collapsed {
     width:100%;
-    max-width:none
 }
 
 .panel-main__inner {
