--- a/src/components/codes.css
+++ b/src/components/codes.css
@@ -202,6 +202,7 @@ TextField {
     aspect-ratio: 8.3 / 11.7;
     margin-left:auto;
     margin-right:auto;
+    color: black;
 }
 
 .buttonArrayGrid{
@@ -233,4 +234,32 @@ TextField {
 p {
     margin-top: auto;
     margin-bottom: auto;
+}
+
+.linear_logo{
+    width:200px;
+    margin-top:auto;
+    margin-bottom:auto;
+}
+
+.testHeaderGrid {
+    display:grid;
+    grid-template-columns: 200px 1fr 250px;
+    margin-top:50px;
+    margin-left:50px;
+    margin-right:50px;
+    font-size: 2em;
+    padding-top:10px;
+    padding-bottom:10px;
+    margin-bottom:100px;
+}
+
+.underline {
+    text-decoration: underline 0.1px black;
+}
+
+.testTitle{
+    font-size:2em;
+    margin-top:auto;
+    margin-bottom:auto;
 }
