--- a/src/components/codes.css
+++ b/src/components/codes.css
@@ -191,16 +191,12 @@ TextField {
 }
 
 .insideModalField{
-    width: 1245px;
-    min-height: 1298px;
-    margin-top: 30px;
+    width: 210mm;
+    min-height: 280mm;
+    margin-top: 50px;
     margin-left:auto;
     margin-right:auto;
     color: black;
-    padding-top:50px;
-    padding-bottom:50px;
-    padding-left:50px;
-    padding-right:50px;
 }
 
 .buttonArrayGrid{
@@ -214,8 +210,7 @@ TextField {
 .infoGrid{
     display:grid;
     grid-template-columns: 1fr 200px;
-    max-width:1245px;
-    min-width:941px;
+    width: 210mm;
     margin-left:auto;
     margin-right: auto;
     padding-top:auto;
@@ -235,21 +230,24 @@ p {
 }
 
 .linear_logo {
-    width:200px;
+    width:30mm;
     margin-top:auto;
     margin-bottom:auto;
 }
 
 .testHeaderGrid {
     display:grid;
-    grid-template-columns: 200px 1fr 250px;
-    margin-top:50px;
-    margin-left:50px;
-    margin-right:50px;
-    font-size: 2em;
-    padding-top:10px;
-    padding-bottom:10px;
-    margin-bottom:100px;
+    grid-template-columns: 30mm 1fr 40mm;
+    margin-top:20mm;
+    margin-left:20mm;
+    margin-right:20mm;
+    margin-bottom:20mm;
+}
+
+.studentInfo{
+    font-size: 5mm;
+    margin-right:0px;
+    margin-left:auto;
 }
 
 .underline {
@@ -257,7 +255,7 @@ p {
 }
 
 .testTitle {
-    font-size:2em;
+    font-size:10mm;
     margin-top:auto;
     margin-bottom:auto;
 }
@@ -271,7 +269,7 @@ p {
 
 .orderedTest{
     padding-left: 100px;
-    font-size: 25px;
+    font-size: 5mm;
     font-weight: 0.1px;
 }
 
@@ -279,15 +277,17 @@ p {
     padding-left:10px;
     margin-bottom:10px;
     top: 0px;
+    font-size: 5mm;
 }
 
 .singleQuiz{
-    margin-bottom: 50px;
+    margin-bottom: 5mm;
+    font-size: 5mm;
 }
 
 #printable {
-    width:90%;
-    height: 90%;
+    width:100%;
+    height:100%;
     margin-top:auto;
     margin-bottom:auto;
     margin-left:auto;
@@ -308,4 +308,23 @@ p {
     padding-top:30px;
     padding-bottom:30px;
     display:block;
+}
+
+
+@page {
+    size: 210mm 253mm;
+}
+
+@media print {
+    html, body{
+        height: initial !important;
+        overflow: initial !important;
+    }
+    .insideModalField{
+        margin-top: 0px;
+        margin-bottom: 0px;
+        margin-left: auto;
+        margin-right: auto;
+        width:auto;
+    }
 }
