--- a/src/components/quizgen.css
+++ b/src/components/quizgen.css
@@ -3,7 +3,7 @@
 .singleProjectCard
 {padding-top:auto;padding-bottom:auto; width:100%;}
 .projectImage
-{max-width:60vw;display:block;margin-top:auto;margin-bottom:auto;margin-left:auto;margin-right:auto}
+{max-width:60vw;display:block;margin-top:auto;margin-bottom:auto;margin-left:auto;margin-right:auto; border-radius:10px;}
 .separator
 {border-top:1px solid #ddd;width:80%}
 .projectIcons
@@ -98,6 +98,9 @@
     margin-right:auto;
     display:block;
     margin-top:40px;
+    border-radius:10px;
+    box-shadow:1px 1px 1px 1px;
+    margin-bottom:10px;
 }
 
 #quizgen{
