--- a/src/components/quizgen.css
+++ b/src/components/quizgen.css
@@ -1,7 +1,7 @@
 .codeContainer
-{display:block; margin-top: 100px;}
+{display:block; margin-top: 100px; width:90%; margin-left:auto; margin-right:auto;}
 .singleProjectCard
-{padding-top:auto;padding-bottom:auto; width:100%;}
+{padding-top:auto;padding-bottom:auto; width:90%;}
 .projectImage
 {max-width:60vw;display:block;margin-top:auto;margin-bottom:auto;margin-left:auto;margin-right:auto; border-radius:10px;}
 .separator
@@ -18,7 +18,7 @@
 {margin-bottom:70px}
 @media (max-width:1000px)
 {.singleProjectCard
-{display:block;margin-bottom:100px;width:100%;margin-left:auto;margin-right:auto}
+{display:block;margin-bottom:100px;width:90%;margin-left:auto;margin-right:auto}
 .projectImage
 {width:40vw;max-width:250px;box-shadow:1px 1px 1px 1px gray;border-radius:10px;margin-left:auto;margin-right:auto;margin-bottom:40px}
 .projectIcons
@@ -58,7 +58,7 @@
 }
 @media (min-width:1166px)
 {.singleProjectCard
-{display:grid;grid-template-columns:200px 1fr;margin-bottom:60px;width:100%;margin-left:auto;margin-right:auto}
+{display:grid;grid-template-columns:200px 1fr;margin-bottom:60px;width:90%;margin-left:auto;margin-right:auto}
 .projectImage
 {width:180px;margin-top:auto;margin-bottom:auto}
 .projectText
